# SagaCross

./: .gitignore  LICENSE  Makefile  README.md  SagaCross.sln
SagaCross/: SagaCross.cpp  SagaCross.vcxproj  SagaCross.vcxproj.filters
platform/Android/app/: build.gradle
platform/Android/app/src/androidTest/java/com/noclip/marcinmalysz/sagacross/: ExampleInstrumentedTest.kt
platform/Android/app/src/main/: AndroidManifest.xml
platform/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
platform/Android/app/src/main/java/com/noclip/marcinmalysz/sagacross/: GamePad.kt  MainActivity.kt  SCGLView.kt  SCGameWrapper.kt  SCImmersiveMode.kt
platform/Android/app/src/main/res/layout/: activity_main.xml
platform/Android/app/src/main/res/values/: strings.xml  styles.xml
platform/Android/app/src/test/java/com/noclip/marcinmalysz/sagacross/: ExampleUnitTest.kt
platform/Android/gradle/wrapper/: gradle-wrapper.properties
platform/SagaCross/SagaCross.xcodeproj/: project.pbxproj
platform/SagaCross/SagaCross.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/SagaCross/SagaCross.xcodeproj/project.xcworkspace/xcuserdata/marcinmalysz.xcuserdatad/: UserInterfaceState.xcuserstate
platform/html/: Makefile
platform/iOS/SagaCross/: AppDelegate.swift  GamePad.swift  SagaCross-Bridging-Header.h  ViewController.swift
platform/iOS/SagaCross.xcodeproj/: project.pbxproj
platform/iOS/SagaCross.xcodeproj/project.xcworkspace/xcuserdata/marcinmalysz.xcuserdatad/: UserInterfaceState.xcuserstate
platform/iOS/SagaCross.xcodeproj/xcuserdata/marcinmalysz.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/iOS/SagaCross/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/iOS/SagaCross/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
platform/iOS/SagaCross/Game/: SCGameWrapper.h  SCGameWrapper.mm
resource/maps/map1/: level001_objects.json  level001_spawn.gmf  level001_terrain.gmf  nature_tree-sprucesummer-A_destroyed.gmf  object_block-anti-tank-A.gmf  object_block-anti-tank-B.gmf  object_building-rural-A.gmf
resource/maps/map2/: level002_objects.json  level002_spawn.gmf  level002_terrain.gmf  nature_rock-shore-a.gmf  nature_rocks-light-dry.gmf  object_greek-column-broken-c.gmf  object_greek-column-broken-d.gmf  object_navy-warship-a.gmf  object_old-stone-wall-greece-a.gmf  object_small-greek-house-a.gmf
resource/models/: Bots.json  Prefabs.json  avatars.json  background-plate-001.gmf  fx_explosion-spherical-a.gmf  fx_explosion-spherical-b.gmf  fx_explosion-spherical-c.gmf  fx_ground-explosion-a.gmf  fx_ground-explosion-b.gmf  fx_muzzleflash-a.gmf  level002_mesh_flags-cord.gmf  level002_mesh_island-1-p1.gmf  level002_mesh_island-1-p2.gmf  level002_mesh_sea-surface.gmf  level002_mesh_shore-waves.gmf  level002_mesh_sky.gmf  nature_bush-spring-A.gmf  nature_bush-spring-dry.gmf  nature_grass-summer-A.gmf  nature_rocks-mountains-A.gmf  nature_rocks-mountains-big-A.gmf  nature_stone-light-small-a.gmf  nature_tree-sprucesummer-A.gmf  object_building-rural-A_destroyed.gmf  object_greek-column-broken-a.gmf  object_greek-column-broken-b.gmf  object_greek-column-piece-a.gmf  object_greek-column-piece-b.gmf  object_greek-column.gmf  object_level001-water-stream-fx.gmf  object_old-com-tower-mesha.gmf  object_old-com-tower-meshb.gmf  object_old-stone-wall-greece-b.gmf  object_parachute.gmf  object_well-old-dry.gmf  object_wooden-crate-A.gmf  object_wooden-crate-A_mine.gmf  object_wooden-crate-closed-A.gmf  simplesphere2.gmf  tank_anti-tank-mine.gmf  (+2 more)
resource/shaders/: cutoff.fsh  cutoff.vsh  foliage.fsh  foliage.vsh  gui.fsh  gui.vsh  line.fsh  line.vsh  meshsimple.fsh  terrain.fsh  terrain.vsh  water.fsh  water.vsh
resource/shaders/desktop/: cutoff.fsh  foliage.fsh  foliage.vsh  gui.fsh  gui.vsh  line.fsh  line.vsh  meshsimple.fsh  meshsimple.vsh  terrain.fsh  terrain.vsh  water.fsh  water.vsh
resource/sounds/: bonus.caf  explode.caf  fire.caf  hit0.caf  hit1.caf  hit2.caf  hit3.caf  kaboom.caf  last_mine.caf  metal.caf  missile0.caf  missile1.caf  missile2.caf  nice0.caf  nice1.caf  nice2.caf  nice3.caf  nice4.caf  no_mine.caf  pyr.caf  ready0.caf  shoot.caf  tick.caf  whooo.caf
resource/tanks/Heavy/: tank_chasis_02.gmf  tank_gun_02.gmf  tank_suspension_02.gmf  tank_turret_02.gmf
resource/tanks/Normal/: tank_chasis_01.gmf  tank_gun_01.gmf  tank_suspension_01.gmf  tank_turret_01.gmf
source/: CFrustum.hpp  Core-pch.cpp  Core-pch.hpp  EnumOptionMacro.hpp  MathLib.h  Mathlib.inl  SCApplication.cpp  SCApplication.h  SCAudio.cpp  SCAudio.h  SCBaseScene.hpp  SCBonus.h  SCBulletManager.h  SCCamera.h  SCDebugScene.cpp  SCDebugScene.hpp  SCDisplay.cpp  SCDisplay.h  SCEntity.cpp  SCEntity.h  SCFastAnimatedMesh.h  SCFastCutoffMesh.h  SCFastMesh.h  SCFastOceanMesh.h  SCFastWaterMesh.h  SCFrustum.hpp  SCGLFWDisplay.cpp  SCGLFWDisplay.h  SCGLFWInput.cpp  SCGLFWInput.h  SCGround.h  SCHeightMap.h  SCInputInterface.h  SCMenuScene.cpp  SCMenuScene.hpp  SCMeshInstanceManager.h  SCMobileDisplay.cpp  SCMobileDisplay.h  SCMobileInput.cpp  SCMobileInput.h  (+34 more)
source/Math/: MathTypes.h  xMat34.h  xQuat.h  xVec2.h  xVec3.cpp  xVec3.h
source/Timer/: AndroidTimer.cpp  AndroidTimer.hpp  DarwinTimer.cpp  DarwinTimer.hpp  GameTimer.cpp  GameTimer.hpp  WindowsTimer.cpp  WindowsTimer.hpp
